ASP.NET Core sample/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspcoredemo
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
  labels:
    app: aspcoredemo
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
    protocol: TCP
  - name: metrics
    port: 8080
    targetPort: metrics
    protocol: TCP
  selector:
    app: aspcoredemo
