ASP.NET Core sample/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aspcoredemo
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: api.hellman.oxygen.dfds.cloud
      http:
        paths:
          - path: /aspcoredemo
            backend:
              serviceName: aspcoredemo
              servicePort: external
